force-app/main/default/objects/Liaison__c/Liaison__c.object-meta.xml
<CustomObject>
    <label>Liaison</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Liaison #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liaisons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>