force-app/main/default/objects/Liaison__c/fields/Liason_For__c.field-meta.xml
<CustomField>
    <fullName>Liason_For__c</fullName>
    <formula>LiasonID__r.Liason_For__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liason For</label>
    <type>Text</type>
</CustomField>