force-app/main/default/objects/Liaison__c/fields/Liason_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Liason_Name_Formula__c</fullName>
    <formula>UserID__r.FName__c &amp;&quot; &quot;&amp;  UserID__r.LName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liason Name</label>
    <type>Text</type>
</CustomField>