force-app/main/default/objects/Liaison__c/fields/Liason_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Liason_Type_Formula__c</fullName>
    <formula>LiasonID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liaison Type</label>
    <type>Text</type>
</CustomField>