force-app/main/default/objects/Liaison__c/fields/LiasonID__c.field-meta.xml
<CustomField>
    <fullName>LiasonID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Liason Type object</description>
    <label>Liason ID</label>
    <referenceTo>Liason_Type__c</referenceTo>
    <relationshipLabel>Liaisons</relationshipLabel>
    <relationshipName>Liaisons</relationshipName>
    <type>Lookup</type>
</CustomField>