force-app/main/default/objects/Liaison__c/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MPS User</label>
    <referenceTo>MPS_User__c</referenceTo>
    <relationshipLabel>Liaisons</relationshipLabel>
    <relationshipName>Liaisons</relationshipName>
    <type>Lookup</type>
</CustomField>